environments/staging/my-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: staging
spec:
  ports:
  - port: 80
  selector:
    run: nginx
